--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:background="@color/colorPrimaryDark">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <EditText
+        android:id="@+id/checklist_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Checklist Title"
+        android:singleLine="true"
+        android:padding="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/checklist_item_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
