--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:padding="8dp"
+    android:backgroundTint="@color/colorPrimary"
     app:cardCornerRadius="20dp">
 
     <LinearLayout
@@ -20,7 +21,7 @@
             android:text="Checklist Item Name"
             android:textStyle="bold"
             android:textSize="24sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
