Added changes to modify theme of app, need to add 'theme selector'

--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/darkGreen">
 
     <EditText
         android:id="@+id/checklist_title"
