--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7CB300</color>
-    <color name="colorPrimaryDark">#4b830d</color>
-    <color name="colorAccent">#aee571</color>
+    <color name="green">#7CB300</color>
+    <color name="darkGreen">#4b830d</color>
+
+    <color name="red">#F63030</color>
+    <color name="darkRed">#7C1A1A</color>
+
+    <color name="yellow">#FFE22B</color>
+    <color name="darkYellow">#8A7B21</color>
+
+    <color name="blue">#0A9DED</color>
+    <color name="darkBlue">#086191</color>
+
+    <color name="orange">#FF8D00</color>
+    <color name="darkOrange">#EA6E00</color>
+
+    <color name="purple">#8A1DEA</color>
+    <color name="darkPurple">#5B1798</color>
+
+    <color name="pink">#FD54EC</color>
+    <color name="darkPink">#98348E</color>
+
 </resources>
